# SemanticRouter

./: .gitignore  README.md  config.example.json  config.json  fix-connection-issue.ps1  kiro-mcp-config.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
docs/: KIRO_SETUP.md  QUICK_START.md  configuration.md  usage.md
src/mcp_router/: __init__.py  __main__.py
src/mcp_router/core/: __init__.py  config.py  config_parser.py  errors.py  logging.py  models.py  namespace.py  validation.py
src/mcp_router/discovery/: __init__.py  alias_resolver.py  manager.py  upstream.py
src/mcp_router/embedding/: __init__.py  engine.py  utils.py
src/mcp_router/proxy/: __init__.py  proxy.py
src/mcp_router/search/: __init__.py  default_subset.py  engine.py  sanitize.py  similarity.py
src/mcp_router/server/: __init__.py  server.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py  test_real_playwright_mcp.py
tests/property/: __init__.py  test_properties_config.py  test_properties_default_subset.py  test_properties_discovery.py  test_properties_discovery_manager.py  test_properties_embedding.py  test_properties_logging.py  test_properties_proxy.py  test_properties_search.py  test_properties_server.py  test_properties_validation.py
tests/unit/: __init__.py  test_alias_resolver.py  test_config.py  test_config_parser.py  test_default_subset.py  test_discovery.py  test_discovery_manager_loading.py  test_embedding.py  test_error_handling.py  test_loading_config.py  test_logging.py  test_models.py  test_proxy.py  test_search.py  test_search_engine_dynamic.py  test_server.py  test_server_loading_handlers.py
